# Personal-Projects

./: .clang-format  .gitignore  .gitmodules  README.md  zzApotheosis.gpg.base64
Academic/Computer Science 1/: .gitignore
Academic/Digital Circuits III/: README.md
Academic/EET Senior Project/: .gitignore
C Practice/shared_libraries/: foo.c  notes.txt
Computer Science 1/resources/: Main_04_Input.txt  Main_06_Input.txt  Main_08_Output.txt  Main_10_Output.txt  program05 Console Test.txt
Computer-Science-1/resources/: Main_07_Input.txt  Main_07_Output.txt  program09 Console Text
Config/: .zshrc  kitty.conf
Digital Circuits III/Project 2/: closest_idle_calculator.v  dual_seven_segment.v.bak
Digital Image Processing/: .gitignore
JenningsUtil/: .gitignore
Keygen/: README.md  meson.build
Keygen/src/: charset.c  main.c
Notes/: nfs_over_ssh.txt
PerlModules/: LogUtil.pm  Logger.pm
Programming Practice/C/: meson.build
Programming Practice/C/arguments/: args.c  meson.build
Programming Practice/C/gtk/: basic.c  example-1.c
Programming Practice/C/journald/: README.md
Programming Practice/C/labels/: main.c
Programming Practice/C/libutil/: meson.build  util.c
Programming Practice/C/libutil/include/: util.h
Programming Practice/C/libutil/src/: string.c  util.c
Programming Practice/C/linkedlist/: linkedlist.c  linkedlist.h  main.c  main.h  meson.build  node.c  node.h
Programming Practice/C/linkedlist/src/: linkedlist.c  main.c  main.h  node.c  node.h
Programming Practice/C/linkedlist/subprojects/: libutil
Programming Practice/C/lkm/: Makefile
Programming Practice/C/project_euler/problem_01/: main.c
Programming Practice/C/project_euler/problem_03/: main.c
Programming Practice/C/project_euler/problem_04/: palindrome.c
Programming Practice/C/project_euler/problem_05/: euclid.h
Programming Practice/C/project_euler/problem_07/: main.c
Programming Practice/C/project_euler/problem_08/: main.c
Programming Practice/C/project_euler/problem_16/: main.c
Programming Practice/C/testing/: main.c
Programming Practice/C/unix_sockets/: client.c
Programming Practice/C/util/: meson.build  util.c
Programming Practice/C/util/src/: linkedlist.c
Scripts/: updatesystem
Send Email/: README.md
Shell Scripts/: encrypted_archive.tar.gz.gpg  fetch  gacp  targpg_techniques.txt  zzCrypt
System Config/: .zshrc  arch-package-list.txt  etc.ssh.sshd_config  etc.zsh.zshrc  kitty.conf  notes.txt
Testing/: test.glade
Zsh/: .zshenv  etc.zsh.zshrc  fetch
archive/sysloglistener/C/: meson.build
archive/sysloglistener/C/src/: logger.c  unixsocket.c
coding-practice/C++/qt6_example/src/: CMakeLists.txt  game.cpp  mainwindow.ui
coding-practice/C++/qt6_stylesheets/: CMakeLists.txt
coding-practice/C++/qt6_stylesheets/src/: CMakeLists.txt  mainwindow.hpp
coding-practice/C/eventfd/src/: .gitignore  CMakeLists.txt  README.md  forked.c
coding-practice/C/eventloop/src/: CMakeLists.txt
coding-practice/C/gpgme/src/: funcnode.c  funcnode.h  functionlist.c  functionlist.h  gpgme-example.c  gpgme-example.h  main.c  meson.build
coding-practice/C/gtk4/src/: CMakeLists.txt  basic.c  helloworld.c  test-lib.c
coding-practice/C/libgmp/src/: meson.build
coding-practice/C/libvlc/src/: CMakeLists.txt  client.c  server.c
coding-practice/C/poll/src/: CMakeLists.txt  main.c
coding-practice/C/shm/src/: .gitignore  CMakeLists.txt  shm_receive.c  shm_send.c
coding-practice/C/unit-testing/src/: main.c  meson.build
coding-practice/C/unit-testing/src/math/: addition.c  division.c  exponent.c  factorial.c  factorial.h  math.h  meson.build  modulo.c  modulo.h  multiplication.c  multiplication.h  subtraction.h
coding-practice/C/unit-testing/src/test/: test-addition-01.c  test-addition-02.c  test-division-00.c  test-division-02.c  test-factorial-00.c  test-modulo-02.c  test-multiplication-00.c  test-multiplication-02.c  test-subtraction-00.c
coding-practice/C/weechat-plugins/src/: main.c  meson.build
coding_practice/C/challenge_response_hmac/src/: .gitignore  CMakeLists.txt  client.c  different.key  server.c
coding_practice/C/const_keyword/src/: .gitignore  CMakeLists.txt  main.c
coding_practice/C/function_pointers/src/: .gitignore  CMakeLists.txt
coding_practice/C/gnutls/src/: .gitignore  CMakeLists.txt  client.c  client.crt  client.req  dtls_client.c  server.c  server.key  server.req  tls_server.c
coding_practice/C/gtk4/src/: CMakeLists.txt  basic.c  example-0.c  test-bin.c  test-lib.h
coding_practice/C/testing/: main.c  meson.build  vector.c
coding_practice/C/testing/src/: main.h
coding_practice/C/util/: meson.build
coding_practice/C/util/src/: node.c  stacktoheap.c  string.c
devconfig/: .tmux.conf  .zshenv  .zshrc  init.lua  init.vim
devtools/: .ctags  init.vim  neovim-default.txt
journaldlistener/: copy.py  meson.build
journaldlistener/src/: client.c  client.h  jdlutil.h  journald.h  journaldlistener.pl  logger.c  logger.h  main.c  main.h  server.c  server.h  test.pl  test_client.pl  unixsocket.c
journaldlistener_perl/: journaldlistener.pl
notes/: dont_readme.txt  neovim.txt  secure_passwords.txt  targpg_techniques.txt
perlmodules/: HashUtil.pm
scripts/: checksshsession  fetch  yeet
stig_tool/: build.sh  meson.build
stig_tool/src/: stigtool.c
stigme/: copy.py  meson.build
stigme/src/: stigme.c  stigme.h
stigme/src/test/: all.c
stigtool/: meson.build
stigtool/src/: stigtool.c  stigtool.h
sysloglistener/: build.sh  meson.build
sysloglistener/C/src/: client.c  logger.h  project.c  project.h  server.c  server.h  unixsocket.h
sysloglistener/Perl/: .gitignore  client.pl  example.pl  example_client.pl  example_subscript.pl  lib  sysloglistener.pl  test_client.pl
sysloglistener/Perl_fifo/: .gitignore  sysloglistener.pl
sysloglistener/src/: client.c  client.h  jdlutil.c  jdlutil.h  journald.c  logger.c  logger.h  project.c  project.h  server.c  server.h  slutil.c  slutil.h  test.c  test.h
testing/: builder.ui  example-3.c  gtk.c  how_to_build.txt  keygen.pl  main.c  main.go  memleak.pl  memleak.py
(+2483 files in other folders)
